fixed backround spacing bug

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ a:active {
     display: flex;
     flex-wrap: wrap;
     opacity: 0.05;
+    align-content: flex-start;
 }
 
 .triangle {
